Feat rewrite all functions and complete the game

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Rock Paper Cissors</title>
   </head>
   <body>
-    <h1>Hello People!</h1>
-    <p>Let's play some <strong>Rock-Paper-Cissors!</strong></p>
+    <h1>Let's play some <strong>Rock-Paper-Cissors!</strong></h1>
+    <p>Best out of 9!</p>
   </body>
 </html>
