Complete the main alogrithm

--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
-    <title>Rock Paper Cissors</title>
-  </head>
-  <body>
-    <h1>Let's play some <strong>Rock-Paper-Cissors!</strong></h1>
-    <p>Best out of 9!</p>
-  </body>
+	<head>
+		<link rel="stylesheet" href="style.css" />
+		<title>Rock Paper Cissors</title>
+	</head>
+	<body>
+		<h1>Let's play some <strong>Rock Paper Scissors!</strong></h1>
+		<!-- <p>Best out of 9!</p> -->
+		<p>Please click a button to play!</p>
+		<div class="container">
+			<span class="button rock">Rock</span>
+			<span class="button paper">Paper</span>
+			<span class="button cissors">Scissors</span>
+		</div>
+		<div id="scoreboard">
+			<h2>Scoreboard:</h2>
+		</div>
+		<script src="script.js"></script>
+	</body>
 </html>
